Added product detail

--- a/Ecom/Client/Shared/ProductList.razor
+++ b/Ecom/Client/Shared/ProductList.razor
@@ -11,7 +11,7 @@
                 </a>
             </div>
             <div class="media-body">
-                <a href="#">
+                <a href="/products/@product.Id">
                     <h4 class="mb-0">@product.Title</h4>
                 </a>
                 <p>@product.Description</p>
@@ -22,11 +22,6 @@
         </li>
     }
 </ul>
-
-
-
-
-
 
 
 @code {
