--- a/Ecom/Client/Pages/Index.razor
+++ b/Ecom/Client/Pages/Index.razor
@@ -1,5 +1,20 @@
-﻿@page "/"
+﻿@inject IProductService ProductService
+
+@page "/"
+@page "/{categoryUrl}"
 
 <PageTitle>My Shop</PageTitle>
 
 <ProductList></ProductList>
+
+
+@code {
+    [Parameter]
+    public string? categoryUrl { get; set; } = null;
+
+    protected override async Task OnParametersSetAsync()
+    {
+        await ProductService.GetProducts(categoryUrl);
+    }
+
+}
