--- a/Ecom/Client/Shared/ProductList.razor
+++ b/Ecom/Client/Shared/ProductList.razor
@@ -1,8 +1,14 @@
 ﻿@inject IProductService ProductService
+@implements IDisposable
 
-
- <ul class="list-unstyled">
-    @foreach(var product in Products)
+@if(ProductService.Products == null)
+{
+    <h1>Loading ...</h1>
+}
+else
+{
+<ul class="list-unstyled">
+    @foreach(var product in ProductService.Products)
     {
         <li class="media my-3">
             <div class="media-img-wrapper mr-2">
@@ -22,13 +28,22 @@
         </li>
     }
 </ul>
+    
 
+}
+
+ 
 
 @code {
-    private static List<Product> Products = new List<Product>();
 
-    protected override async Task OnInitializedAsync()
+
+    protected override void OnInitialized()
     {
-       Products = await ProductService.GetProducts();
+        ProductService.ProductsChanged += StateHasChanged;
+    }
+
+    public void Dispose()
+    {
+        ProductService.ProductsChanged -= StateHasChanged;
     }
 }
