--- a/Ecom/Client/_Imports.razor
+++ b/Ecom/Client/_Imports.razor
@@ -11,3 +11,4 @@
 @using Ecom.Shared
 @using Ecom.Client.Services.ProductService
 @using Ecom.Client.Services.CategoryService
+@using Blazored.LocalStorage
