--- a/Ecom/Client/Pages/ProductDetails.razor
+++ b/Ecom/Client/Pages/ProductDetails.razor
@@ -1,6 +1,7 @@
 ﻿@page "/products/{id:int}"
+@using Ecom.Client.Services.CartService
 @inject IProductService ProductService
-
+@inject ICartService CartService
 
 @if(product == null)
 {
@@ -36,6 +37,9 @@ else
                 }
                 <h4>$@GetSelectedVariant().Price</h4>
             }
+            <button class="btn btn-primary"  @onclick="addToCart">
+                <i class ="oi oi-cart"></i> &nbsp;&nbsp;&nbsp;&nbsp;Add to cart
+            </button>
         </div>
     </div>
 }
@@ -61,5 +65,17 @@ else
     {
         var variant = product?.Variants.FirstOrDefault(p => p.ProductTypeId == currentTypeId);
         return variant!;
+    }
+
+    private async Task addToCart()
+    {
+        var productVariant = GetSelectedVariant();
+        var cartItem = new Cart
+            {
+                ProductId = productVariant.ProductId,
+                ProductTypeId = productVariant.ProductTypeId
+            };
+
+        await CartService.AddToCart(cartItem);
     }
 }
