--- a/Ecom/Client/Shared/CartCounter.razor
+++ b/Ecom/Client/Shared/CartCounter.razor
@@ -1,10 +1,31 @@
-﻿
+﻿@using Ecom.Client.Services.CartService
+@inject ICartService CartService
+@inject ISyncLocalStorageService SyncLocalStorage
+@implements IDisposable
+
 
 <a href="cart" class="btn btn-info">
     <i class="oi oi-cart"></i>
-    <span class="badge">0</span>
+    <span class="badge">@GetCurrentItemsCount()</span>
 </a>
 
 @code {
+
+    private int GetCurrentItemsCount()
+    {
+        var cart = SyncLocalStorage.GetItem<List<Cart>>("cart");
+
+        return cart != null ? cart.Count : 0;
+    }
+
+    protected override void OnInitialized()
+    {
+        CartService.OnChange += StateHasChanged;
+    }
+
+    public void Dispose()
+    {
+        CartService.OnChange -= StateHasChanged;
+    }
 
 }
