adding user reg skeleton

--- a/Ecom/Client/Shared/MainLayout.razor
+++ b/Ecom/Client/Shared/MainLayout.razor
@@ -9,6 +9,7 @@
         <div class="top-row px-4">
             
             <Search/>
+            <UserMenu></UserMenu>
             <CartCounter/>
         </div>
 
