login, logout, changepassword and authentication code

--- a/Ecom/Client/Pages/CartDetail.razor
+++ b/Ecom/Client/Pages/CartDetail.razor
@@ -42,7 +42,7 @@ else
        }
         
        <div class="cart-product-price">
-           Total (@cartProducts.Count) : $@cartProducts.Sum(product => product.Price)
+           Total (@cartProducts.Count) : $@cartProducts.Sum(product => product.Price * product.Quantity)
        </div>
 
     </div>
