--- a/Ecom/Client/Shared/FeaturedProduct.razor
+++ b/Ecom/Client/Shared/FeaturedProduct.razor
@@ -1,4 +1,5 @@
-﻿@inject IProductService ProductService
+﻿@page "/featuredProduct"
+@inject IProductService ProductService
 @implements IDisposable
 
 <center>
