--- a/Ecom/Client/Shared/MainLayout.razor
+++ b/Ecom/Client/Shared/MainLayout.razor
@@ -1,5 +1,5 @@
 ﻿@inherits LayoutComponentBase
-
+@using Blazored.Toast.Configuration
 <div class="page">
     <div class="sidebar">
         <NavMenu />
@@ -16,5 +16,11 @@
         <article class="content px-4">
             @Body
         </article>
+        <BlazoredToasts Position="ToastPosition.BottomRight"
+                Timeout="10"
+                IconType="IconType.FontAwesome"
+                SuccessClass="success-toast-override"
+                SuccessIcon="fa fa-thumbs-up"
+                ErrorIcon="fa fa-bug" />
     </main>
 </div>
