--- a/Ecom/Client/_Imports.razor
+++ b/Ecom/Client/_Imports.razor
@@ -12,3 +12,7 @@
 @using Ecom.Client.Services.ProductService
 @using Ecom.Client.Services.CategoryService
 @using Blazored.LocalStorage
+@using Blazored.Toast
+@using Blazored.Toast.Services
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
